# api_go/routers/setupRouter.go
@@ -164,6 +164,7 @@ func SetupRouter(queries *db.Queries, config config.AppConfig, logger *zap.Sugar
 
 	var inventoryService = service.NewInventoryService(queries, aiService)
 	var clubSectionService = service.NewClubSectionService(queries, clubMemberService)
+	var clubPollService = service.NewClubPollService(queries, clubMemberService)
 
 	noteService.FolderService = &folderService
 
@@ -197,6 +198,7 @@ func SetupRouter(queries *db.Queries, config config.AppConfig, logger *zap.Sugar
 		SetLocal[*service.AIChatService](c, constants.AIChatService, aiChatService)
 		SetLocal[service.InventoryService](c, constants.InventoryService, inventoryService)
 		SetLocal[service.ClubSectionService](c, constants.ClubSectionService, clubSectionService)
+		SetLocal[service.ClubPollService](c, constants.ClubPollService, clubPollService)
 		SetLocal[string](c, constants.AppBaseURL, config.App.URL)
 
 		return c.Next()
@@ -324,6 +326,11 @@ func SetupRouter(queries *db.Queries, config config.AppConfig, logger *zap.Sugar
 		r.Get("/:clubId/absences", controllers.ListMyClubAbsences)
 		r.Post("/:clubId/absences", controllers.CreateClubAbsence)
 		r.Delete("/:clubId/absences/:absenceId", controllers.DeleteClubAbsence)
+		r.Get("/:clubId/polls", controllers.ListClubPolls)
+		r.Post("/:clubId/polls", controllers.CreateClubPoll)
+		r.Post("/:clubId/polls/:pollId/vote", controllers.VoteClubPoll)
+		r.Post("/:clubId/polls/:pollId/close", controllers.CloseClubPoll)
+		r.Delete("/:clubId/polls/:pollId", controllers.DeleteClubPoll)
 	})
 
 	profile.Route("v1/club-events", func(r fiber.Router) {
